<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/content_main"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

            <EditText
                android:id="@+id/city_edit"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/city" />

            <Button
                android:id="@+id/city_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                android:text="@string/CityButton" />


        </LinearLayout>
        <CheckBox
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/wind" />

        <CheckBox
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/pressure" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
