<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimenMarginTop"
        android:text="@string/title"
        android:textColor="@color/colorText"
        android:textSize="@dimen/dimenTextTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimenMarginTop"
        android:text="@string/city"
        android:textColor="@color/colorText"
        android:textSize="@dimen/dimenTextCity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <TextView
        android:id="@+id/text_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimenMarginTop"
        android:layout_marginRight="@dimen/dimenMarginRightTemp"
        android:text="@string/temp"
        android:textColor="@color/colorText"
        android:textSize="@dimen/dimenTextTemp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_city" />

    <ImageView
        android:id="@+id/image_temp"
        android:layout_width="@dimen/WidthImageTemp"
        android:layout_height="@dimen/dimenHeightImageTemp"
        android:layout_marginTop="@dimen/dimenMarginTop"
        app:layout_constraintLeft_toRightOf="@id/text_temp"
        app:layout_constraintTop_toBottomOf="@id/text_city"
        app:srcCompat="@drawable/ic_spite_thermometer" />

    <TextView
        android:id="@+id/text_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimenMarginTop"
        android:text="@string/data"
        android:textColor="@color/colorText"
        android:textSize="@dimen/dimenTexTData"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_temp" />
    <TextView
        android:id="@+id/text_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimenMarginTop"
        android:textColor="@color/colorText"
        android:textSize="@dimen/dimenTexTData"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_data" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/text_humidity">

        <ImageView
            android:id="@+id/image_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimenMarginTop"
            app:srcCompat="@drawable/ic_spite_sun_rain" />

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/weather_histiry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>